# op3-probabilistic-ball-tracking

./: README.md
op3_control_bridge/: CMakeLists.txt  package.xml
op3_control_bridge/config/: control_bridge_params.yaml
op3_control_bridge/include/op3_control_bridge/: ball_dribbler.hpp  ball_follower.hpp  ball_searcher.hpp  ball_tracker.hpp  camera_bearing_utils.hpp  gamestate_listener.hpp  goal_bearing_tracker.hpp
op3_control_bridge/launch/: op3_bringup.launch.py  op3_bringup_real.launch.py  op3_bringup_sim.launch.py  op3_bringup_visualization.launch.py
op3_control_bridge/src/: ball_dribbler.cpp  ball_follower.cpp  ball_searcher.cpp  ball_tracker.cpp  cmd_vel_echo.cpp  cmd_vel_to_walk_param.cpp  control_bridge_node.cpp  fall_detection.cpp  gamestate_listener.cpp  goal_bearing_tracker.cpp
op3_head_scan/: CMakeLists.txt  package.xml
op3_head_scan/include/op3_head_scan/: head_scan.hpp
op3_head_scan/src/: head_scan.cpp
op3_perception/: CMakeLists.txt  LICENSE  package.xml
op3_perception/include/op3_perception/: bearing_transformer.hpp
op3_perception/launch/: ball_filter.launch.py  goalpost_filter.launch.py  vision_overlay.launch.py  vision_overlay_real.launch.py  vision_overlay_sim.launch.py
op3_perception/src/: ball_filter_node.cpp  ball_particle_filter_node.cpp  ball_reacquisition_logger_node.cpp  bearing_transformer.cpp  goalpost_filter_node.cpp  vision_overlay_node.cpp
op3_perception/test/: test_ball_particle_filter.cpp
vision_model/: bh-v10-custom_last.weights  bh-v10-test.cfg  bh-v10.cfg  bh-v10_best.weights  class.names  params.yaml
